--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,14 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#3B82F6" />
-    <meta name="description" content="DesignMate AI - AI-powered design assistant for UI/UX designers" />
+    <meta
+      name="description"
+      content="DesignMate AI - AI-powered design assistant for UI/UX designers"
+    />
     <title>DesignMate AI</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
-</html> 
+</html>
